tests/cases/compiler-development/artifact/errors/syntax-recovery-attribute-token-tree.syntax
Program source=tests/cases/compiler-development/artifact/errors/syntax-recovery-attribute-token-tree.ari
  ParseDiagnostics count=1
    ParseDiagnostic message="unterminated attribute arguments" @tests/cases/compiler-development/artifact/errors/syntax-recovery-attribute-token-tree.ari:2:1 source_id=0 bytes=13..15
      PrimaryLabel message="" @tests/cases/compiler-development/artifact/errors/syntax-recovery-attribute-token-tree.ari:2:1 source_id=0 bytes=13..15
      SecondaryLabel message="attribute arguments starts here" @tests/cases/compiler-development/artifact/errors/syntax-recovery-attribute-token-tree.ari:1:5 source_id=0 bytes=4..5
      Note message="the parser reached the next declaration or end of file before this construct was closed"
      Help message="add a matching ) before continuing"
  Function name=after return=i64 @tests/cases/compiler-development/artifact/errors/syntax-recovery-attribute-token-tree.ari:2:4 source_id=0 bytes=16..21
    Body
      Return @tests/cases/compiler-development/artifact/errors/syntax-recovery-attribute-token-tree.ari:3:3 source_id=0 bytes=35..41
        Integer value=6 @tests/cases/compiler-development/artifact/errors/syntax-recovery-attribute-token-tree.ari:3:10 source_id=0 bytes=42..43
